tests/tools/typecheck/negative/unknown_field.nv
struct Point {
    x: int;
}

fn main() : void {
    let p : Point = Point { x: 1 };
    print_int(p.y);
    return;
}
